<resources>
    <string name="app_name">Lost and Found</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="title_text">Lost and Found</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading...</string>
    <string name="home_page">Home</string>
    <string name="button_lost">Lost Object</string>
    <string name="button_found">Found Object</string>
    <string name="home_page_text">Report a...</string>
    <string name="lost_page">Report lost object</string>
    <string name="found_page">Report found object</string>
    <string name="step1">Step 1:</string>
    <string name="step2">Step 2:</string>
    <string name="button_camera_description">Start camera</string>
    <string name="step1_text">Take a picture</string>
    <string name="step2_text">At this point you can turn the object in at a nearby lost-and-found or leave it where it is. Please select an option below.</string>
    <string name="lost_and_found_button_text">Turn object in</string>
    <string name="leave_object_button">Leave Object</string>
    <string name="maps_page">Maps</string>
    <string name="found_and_turn_in_page">Turn object in</string>
    <string name="submit_button">Submit</string>
    <string name="signing_in">Signing in...</string>
    <string name="view_profile">View Profile</string>
    <string name="profile_page">Profile</string>
</resources>
