<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/light_bone"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/step1"
        android:gravity="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/step2"
        android:gravity="center"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp" />

    <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
        android:contentDescription="@string/button_camera_description"
        android:id="@+id/button_camera"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingLeft="20dp"
        android:layout_centerHorizontal="false"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/camera"
        style="?android:attr/buttonStyleSmall" />

</LinearLayout>